# latticejson

./: .gitignore  404.html  README.md  b2_std_user_beamports_latest.json  conftest.py  index.html  pyproject.toml  reference.html  schema_doc.html  setup.cfg  setup.py
.github/workflows/: main.yml
.mypy_cache/3.7/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json  typing_extensions.data.json  typing_extensions.meta.json
.mypy_cache/3.7/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.7/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.7/json/: __init__.data.json  __init__.meta.json  decoder.data.json  decoder.meta.json  encoder.data.json  encoder.meta.json
.mypy_cache/3.7/latticejson/: __init__.data.json  __init__.meta.json  convert.data.json  convert.meta.json  validate.data.json  validate.meta.json
.mypy_cache/3.7/os/: __init__.data.json  (+3 more)
assets/css/: 0.styles.e04f6d9c.css
assets/js/: 10.ee0e701b.js  11.24fbd0d9.js  2.e2519ece.js  3.3b312956.js  4.836efc0b.js  5.80d31b70.js  6.9a37b26b.js  7.6526d694.js  8.422ac711.js  9.520f6c57.js  app.b08bdca4.js
docs/: .gitignore  README.md  deploy.sh  package-lock.json  package.json  reference.md
docs/.vuepress/: config.js
examples/: README.md  example.c  example.jl  example.js  example.py  fodo.json
latticejson/: __about__.py  __init__.py  arithmetic.lark  cli.py  convert.py  elegant.lark  exceptions.py  format.py  io.py  madx.lark  map.json  migrate.py  parse.py  parser.py  rpn.lark  schema.json  utils.py  validate.py
tests/: test_convert.py  test_parser.py  test_utils.py  test_validate.py
tests/data/: example.json  fodo.json  fodo.lte  fodo.mad  fodo.madx  fodo_simple.lte  nested_reversed_lattice.lte  scratch.lte  test_undefined.json
website/: README.md  deploy.sh
website/.temp/: style.styl
website/.vuepress/: config.js
(+14 files in other folders)
