[tool.poetry]
name = "LatticeJSON"
version = "0.1.2"
description = "A JSON based lattice file format"
authors = ["Felix Andreas"]
repository = "https://github.com/nobeam/latticejson"
documentation = "https://nobeam.github.io/latticejson/"
readme = "README.md"
license = "GPL-3.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.scripts]
latticejson = "latticejson.cli:cli"

[tool.poetry.dependencies]
python = "^3.6"
click = ">=7.0"
fastjsonschema = "^2.14.5"
lark-parser = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
black = "^20.8b1"
isort = "^5.6.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
